Enhance logging and error handling in DiagramHub; update appsettings for database connection and site password

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,11 +2,14 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.SignalR": "Debug",
+      "Microsoft.AspNetCore.Http.Connections": "Debug"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
-  }
+    "DefaultConnection": "Host=localhost;Port=5432;Database=markdown-collab;Username=jeffpatterson"
+  },
+  "SitePassword": "serious"
 }
